// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorSubmissionPage renders with error 1`] = `
<Row
  gutter={0}
  justify="center"
  type="flex"
>
  <Col
    className="mt3 mb3"
    lg={16}
    md={21}
    xl={15}
    xs={24}
    xxl={14}
  >
    <Row
      className="mb3 pa3 bg-white"
      gutter={0}
    >
      <h3>
        Suggest author
      </h3>
      This form allows you to create the profile of a new author. All modifications are transferred to
       
      <ExternalLink
        href="//inspirehep.net/hepnames"
      >
        inspirehep.net/hepnames
      </ExternalLink>
       
      upon approval.
    </Row>
    <Row
      gutter={0}
    >
      <Col>
        <Component
          error={
            Immutable.Map {
              "message": "Submit Error",
            }
          }
          extendSchema={
            ObjectSchema {
              "_blacklist": RefSet {
                "list": Set {},
                "refs": Map {},
              },
              "_conditions": Array [],
              "_defaultDefault": [Function],
              "_deps": Array [],
              "_excludedEdges": Array [],
              "_exclusive": Object {},
              "_mutate": false,
              "_nodes": Array [
                "orcid",
              ],
              "_options": Object {
                "abortEarly": true,
                "recursive": true,
              },
              "_type": "object",
              "_typeError": [Function],
              "_whitelist": RefSet {
                "list": Set {},
                "refs": Map {},
              },
              "fields": Object {
                "orcid": StringSchema {
                  "_blacklist": RefSet {
                    "list": Set {},
                    "refs": Map {},
                  },
                  "_conditions": Array [],
                  "_deps": Array [],
                  "_exclusive": Object {
                    "trim": false,
                    "unique-orcid": false,
                  },
                  "_mutate": false,
                  "_options": Object {
                    "abortEarly": true,
                    "recursive": true,
                  },
                  "_type": "string",
                  "_typeError": [Function],
                  "_whitelist": RefSet {
                    "list": Set {},
                    "refs": Map {},
                  },
                  "tests": Array [
                    [Function],
                    [Function],
                  ],
                  "transforms": Array [
                    [Function],
                    [Function],
                  ],
                },
              },
              "tests": Array [],
              "transforms": Array [
                [Function],
              ],
            }
          }
          initialFormData={
            Object {
              "bai": undefined,
            }
          }
          onSubmit={[Function]}
        />
      </Col>
    </Row>
  </Col>
</Row>
`;

exports[`AuthorSubmissionPage renders with initial store state 1`] = `
<Row
  gutter={0}
  justify="center"
  type="flex"
>
  <Col
    className="mt3 mb3"
    lg={16}
    md={21}
    xl={15}
    xs={24}
    xxl={14}
  >
    <Row
      className="mb3 pa3 bg-white"
      gutter={0}
    >
      <h3>
        Suggest author
      </h3>
      This form allows you to create the profile of a new author. All modifications are transferred to
       
      <ExternalLink
        href="//inspirehep.net/hepnames"
      >
        inspirehep.net/hepnames
      </ExternalLink>
       
      upon approval.
    </Row>
    <Row
      gutter={0}
    >
      <Col>
        <Component
          error={null}
          extendSchema={
            ObjectSchema {
              "_blacklist": RefSet {
                "list": Set {},
                "refs": Map {},
              },
              "_conditions": Array [],
              "_defaultDefault": [Function],
              "_deps": Array [],
              "_excludedEdges": Array [],
              "_exclusive": Object {},
              "_mutate": false,
              "_nodes": Array [
                "orcid",
              ],
              "_options": Object {
                "abortEarly": true,
                "recursive": true,
              },
              "_type": "object",
              "_typeError": [Function],
              "_whitelist": RefSet {
                "list": Set {},
                "refs": Map {},
              },
              "fields": Object {
                "orcid": StringSchema {
                  "_blacklist": RefSet {
                    "list": Set {},
                    "refs": Map {},
                  },
                  "_conditions": Array [],
                  "_deps": Array [],
                  "_exclusive": Object {
                    "trim": false,
                    "unique-orcid": false,
                  },
                  "_mutate": false,
                  "_options": Object {
                    "abortEarly": true,
                    "recursive": true,
                  },
                  "_type": "string",
                  "_typeError": [Function],
                  "_whitelist": RefSet {
                    "list": Set {},
                    "refs": Map {},
                  },
                  "tests": Array [
                    [Function],
                    [Function],
                  ],
                  "transforms": Array [
                    [Function],
                    [Function],
                  ],
                },
              },
              "tests": Array [],
              "transforms": Array [
                [Function],
              ],
            }
          }
          initialFormData={
            Object {
              "bai": undefined,
            }
          }
          onSubmit={[Function]}
        />
      </Col>
    </Row>
  </Col>
</Row>
`;

exports[`AuthorSubmissionPage renders with query 1`] = `
<Row
  gutter={0}
  justify="center"
  type="flex"
>
  <Col
    className="mt3 mb3"
    lg={16}
    md={21}
    xl={15}
    xs={24}
    xxl={14}
  >
    <Row
      className="mb3 pa3 bg-white"
      gutter={0}
    >
      <h3>
        Suggest author
      </h3>
      This form allows you to create the profile of a new author. All modifications are transferred to
       
      <ExternalLink
        href="//inspirehep.net/hepnames"
      >
        inspirehep.net/hepnames
      </ExternalLink>
       
      upon approval.
    </Row>
    <Row
      gutter={0}
    >
      <Col>
        <Component
          error={null}
          extendSchema={
            ObjectSchema {
              "_blacklist": RefSet {
                "list": Set {},
                "refs": Map {},
              },
              "_conditions": Array [],
              "_defaultDefault": [Function],
              "_deps": Array [],
              "_excludedEdges": Array [],
              "_exclusive": Object {},
              "_mutate": false,
              "_nodes": Array [
                "orcid",
              ],
              "_options": Object {
                "abortEarly": true,
                "recursive": true,
              },
              "_type": "object",
              "_typeError": [Function],
              "_whitelist": RefSet {
                "list": Set {},
                "refs": Map {},
              },
              "fields": Object {
                "orcid": StringSchema {
                  "_blacklist": RefSet {
                    "list": Set {},
                    "refs": Map {},
                  },
                  "_conditions": Array [],
                  "_deps": Array [],
                  "_exclusive": Object {
                    "trim": false,
                    "unique-orcid": false,
                  },
                  "_mutate": false,
                  "_options": Object {
                    "abortEarly": true,
                    "recursive": true,
                  },
                  "_type": "string",
                  "_typeError": [Function],
                  "_whitelist": RefSet {
                    "list": Set {},
                    "refs": Map {},
                  },
                  "tests": Array [
                    [Function],
                    [Function],
                  ],
                  "transforms": Array [
                    [Function],
                    [Function],
                  ],
                },
              },
              "tests": Array [],
              "transforms": Array [
                [Function],
              ],
            }
          }
          initialFormData={
            Object {
              "bai": "P.Carenza.1",
            }
          }
          onSubmit={[Function]}
        />
      </Col>
    </Row>
  </Col>
</Row>
`;
